kubernetes/graphite-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: graphite
  labels:
    app.kubernetes.io/name: graphite
    app.kubernetes.io/instance: graphite
