kubernetes/service_graphite.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphite-svc
  namespace: graphite
  labels:
    app.kubernetes.io/instance: graphite
    app.kubernetes.io/name: graphite
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    nodePort: 30080
    protocol: TCP
  - name: carbon
    port: 2003
    nodePort: 32003
    protocol: TCP
  selector:
    app.kubernetes.io/instance: graphite
    app.kubernetes.io/name: graphite
